--- a/overseer/templates/overseer/index.html
+++ b/overseer/templates/overseer/index.html
@@ -30,7 +30,7 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Overseer<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/overseer">Overseer<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="#">Orders<span class="sr-only">(current)</span></a>
@@ -40,6 +40,9 @@
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="/admin">Admin<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="quote">Quote<span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
